@@ -1,3 +1,6 @@
+18/03/11 Mathieu Groussin
+* Added Hadamard product function in MatrixTools.
+
 28/02/11 -*- Version 2.0.1 -*-
 
 25/02/11 Julien Dutheil
